# SeuManualPro

./: .gitignore  CHALLENGE.md  README.md  pyproject.toml
app/: config.py  main.py
app/database/: core.py
app/models/: core.py  manutencao.py  material.py
app/routes/: manutencao.py  material.py
app/schemas/: core.py  manutencao.py  material.py
app/services/: manutencao.py  material.py
tests/: conftest.py  test_feature_materiais.py
